src/test/resources/sdp/examples/should-pass/with-email/multiple/minimal-expected.sdp
v=0
o=- 123 0 IN IP4 streaming.awesome.com
s=my session
e=j.doe@example.com
e=j.doe@example.com (Jane Doe)
e=Jane Doe <j.doe@example.com>
