src/test/resources/sdp/examples/should-fail/bad-data/version/bad-version/minimal.sdp
v=0 54
o=- 123 0 IN IP4 streaming.awesome.com
s=my session
